--- a/microservice/docker-compose.yml
+++ b/microservice/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - "5432:5432"
     networks:
       - postgres
-    restart: always
+    restart: unless-stopped
 
   grafana:
     container_name: grafana
